--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -96,6 +96,17 @@
   			<version>4.11.0</version>
   			<scope>test</scope>
 		</dependency>
+		<!-- Apache POI for Excel export -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.3</version>
+		</dependency>
 	</dependencies>
 	<build>
   <plugins>
